<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- 名称 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_name_label" />

        <EditText
            android:id="@+id/action_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <!-- 序号 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_order_label" />

        <EditText
            android:id="@+id/action_order_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"/>
    </LinearLayout>

    <!-- 延迟 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delay_label" />

        <EditText
            android:id="@+id/action_delay_input"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="@string/default_execution_delay_time"/>

        <Switch
            android:id="@+id/action_random_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/action_execution_random_switch"
            android:text="随机" />
        <EditText
            android:id="@+id/action_random_begin_input"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="1000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />
        <EditText
            android:id="@+id/action_random_end_input"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="5000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:weightSum="100">

        <Button
            android:id="@+id/action_select_param_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="50"
            android:background="@color/design_default_color_secondary"
            android:padding="5dp"
            android:text="@string/cancel_task"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/action_select_param_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="50"
            android:background="@color/design_default_color_primary"
            android:padding="5dp"
            android:text="@string/save_task"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>