<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name_label" />

                <EditText
                    android:id="@+id/task_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_describe_label" />

                <EditText
                    android:id="@+id/task_describe_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_execution_times_label" />

                <EditText
                    android:id="@+id/task_execution_times_input"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />

                <Switch
                    android:id="@+id/task_always_execution_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/task_always_execution_switch"
                    android:text="@string/always_execution" />
            </LinearLayout>

            <Button
                android:id="@+id/task_add_new_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/task_add_new_action"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="50dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_action_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true" />
        </ScrollView>
    </LinearLayout>

    <!-- Task save button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/task_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="50"
            android:background="@color/design_default_color_secondary"
            android:padding="5dp"
            android:text="@string/cancel_task"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/task_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="50"
            android:background="@color/design_default_color_primary"
            android:padding="5dp"
            android:text="@string/save_task"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>