<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/main_view_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/main_view_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_btn_svg"
            android:contentDescription="@string/main_view_close_btn_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="70dp">
        <!--  <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">-->

        <!-- Task list view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_view_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true" />
        <!--</LinearLayout>-->
    </ScrollView>

    <!-- Add new task button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/main_view_add_new_task_btn"
        android:text="@string/add_new_task"
        android:textColor="@color/white"
        android:background="@color/design_default_color_primary" />
    </RelativeLayout>
</LinearLayout>