<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- task name -->
        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:src="@drawable/ic_serial_tasks" />-->

        <TextView
            android:id="@+id/task_list_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16sp" />
        <!--</LinearLayout>-->

        <!-- function button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/task_list_exec_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/execute"
                android:focusable="false"
                android:src="@drawable/ic_exec_svg" />

            <ImageView
                android:id="@+id/task_list_edit_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:contentDescription="@string/edit"
                android:focusable="false"
                android:src="@drawable/ic_edit_svg" />

            <ImageView
                android:id="@+id/task_list_del_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:contentDescription="@string/del"
                android:focusable="false"
                android:src="@drawable/ic_del_svg" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ccc" />

</LinearLayout>